fix: final_ratings.csv

--- a/dongyeon/Rating_data_crawler.ipynb
+++ b/dongyeon/Rating_data_crawler.ipynb
@@ -18828,14 +18828,156 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "558c89aa",
+   "metadata": {},
    "source": [
-    "rat_df"
+    "### final_ratings 간단한 전처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "48ff0743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/final_ratings.csv\")\n",
+    "\n",
+    "# float으로 바꾸기 위해 \",\"을 제거\n",
+    "df[\"Total\"] = df[\"Total\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Total_males\"] = df[\"Total_males\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Total_Females\"] = df[\"Total_Females\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "\n",
+    "df[\"All_below_18\"] = df[\"All_below_18\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"All_18_29\"] = df[\"All_18_29\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"All_30_44\"] = df[\"All_30_44\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"All_over_45\"] = df[\"All_over_45\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "\n",
+    "df[\"Males_below_18\"] = df[\"Males_below_18\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Males_18_29\"] = df[\"Males_18_29\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Males_30_44\"] = df[\"Males_30_44\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Males_over_45\"] = df[\"Males_over_45\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "\n",
+    "# df[\"Females_below_18\"] = df[\"Females_below_18\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Females_18_29\"] = df[\"Females_18_29\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Females_30_44\"] = df[\"Females_30_44\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "df[\"Females_over_45\"] = df[\"Females_over_45\"].apply(lambda x: x.replace(\",\",\"\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d867fd4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " cols = ['All_rank_below_18', 'All_rank_18_29', 'All_rank_30_44',\n",
+    "       'All_rank_over_45', 'Males_rank_below_18', 'Males_rank_18_29',\n",
+    "       'Males_rank_30_44', 'Males_rank_over_45', 'Females_rank_below_18',\n",
+    "       'Females_rank_18_29', 'Females_rank_30_44', 'Females_rank_over_45']\n",
+    "\n",
+    "def removed(x):\n",
+    "    if x == \"-\":\n",
+    "        x = 0\n",
+    "        return x\n",
+    "    return x\n",
+    "\n",
+    "for col in cols:\n",
+    "    df[col] = df[col].apply(removed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "02c106f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['Avg', 'Total', 'Total_males', 'Total_Females', 'All_below_18',\n",
+    "       'All_18_29', 'All_30_44', 'All_over_45', 'Males_below_18',\n",
+    "       'Males_18_29', 'Males_30_44', 'Males_over_45', 'Females_below_18',\n",
+    "       'Females_18_29', 'Females_30_44', 'Females_over_45', \n",
+    "       'All_rank_below_18', 'All_rank_18_29', 'All_rank_30_44',\n",
+    "       'All_rank_over_45', 'Males_rank_below_18', 'Males_rank_18_29',\n",
+    "       'Males_rank_30_44', 'Males_rank_over_45', 'Females_rank_below_18',\n",
+    "       'Females_rank_18_29', 'Females_rank_30_44', 'Females_rank_over_45']\n",
+    "\n",
+    "df[cols] = df[cols].astype(np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "fa63e445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/final_netflix_df.csv\", index= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "f6e92ec0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8807 entries, 0 to 8806\n",
+      "Data columns (total 30 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Title                  8807 non-null   object \n",
+      " 1   Avg                    8807 non-null   float64\n",
+      " 2   Total                  8807 non-null   float64\n",
+      " 3   Total_males            8807 non-null   float64\n",
+      " 4   Total_Females          8807 non-null   float64\n",
+      " 5   All_below_18           8807 non-null   float64\n",
+      " 6   All_18_29              8807 non-null   float64\n",
+      " 7   All_30_44              8807 non-null   float64\n",
+      " 8   All_over_45            8807 non-null   float64\n",
+      " 9   Males_below_18         8807 non-null   float64\n",
+      " 10  Males_18_29            8807 non-null   float64\n",
+      " 11  Males_30_44            8807 non-null   float64\n",
+      " 12  Males_over_45          8807 non-null   float64\n",
+      " 13  Females_below_18       8807 non-null   float64\n",
+      " 14  Females_18_29          8807 non-null   float64\n",
+      " 15  Females_30_44          8807 non-null   float64\n",
+      " 16  Females_over_45        8807 non-null   float64\n",
+      " 17  Title_ID               8807 non-null   object \n",
+      " 18  All_rank_below_18      8807 non-null   float64\n",
+      " 19  All_rank_18_29         8807 non-null   float64\n",
+      " 20  All_rank_30_44         8807 non-null   float64\n",
+      " 21  All_rank_over_45       8807 non-null   float64\n",
+      " 22  Males_rank_below_18    8807 non-null   float64\n",
+      " 23  Males_rank_18_29       8807 non-null   float64\n",
+      " 24  Males_rank_30_44       8807 non-null   float64\n",
+      " 25  Males_rank_over_45     8807 non-null   float64\n",
+      " 26  Females_rank_below_18  8807 non-null   float64\n",
+      " 27  Females_rank_18_29     8807 non-null   float64\n",
+      " 28  Females_rank_30_44     8807 non-null   float64\n",
+      " 29  Females_rank_over_45   8807 non-null   float64\n",
+      "dtypes: float64(28), object(2)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.read_csv(\"../data/final_netflix_df.csv\").info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa63e445",
+   "id": "0a104974",
    "metadata": {},
    "outputs": [],
    "source": []
